Improved device compatibility

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -15,8 +15,8 @@
     </div>
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="about-author.html">About</a></li>
-      <li><a href="about-book.html">Book</a></li>
+      <li><a href="about-author.html">About the Author</a></li>
+      <li><a href="about-book.html">About the Book</a></li>
       <li><a href="purchase.html">Purchase</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -26,7 +26,7 @@
     <h2>Contact Us</h2>
     <p>Have questions about the book or the Sendforth Program? Feel free to reach out!</p>
     <div class="contact-details">
-      <form class="contact-form" name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="thank-you.html">
+      <form class="contact-form" name="contact" method="POST" data-netlify="true" data-netlify-honeypot="bot-field" action="/thank-you">
         <input type="hidden" name="form-name" value="contact" />
         <input type="hidden" name="bot-field" />
         <div class="form-instruction">Please fill out the form below:</div>
