Updated For Media page

--- a/Pages/purchase.html
+++ b/Pages/purchase.html
@@ -28,7 +28,7 @@
                 <div class="book-card-text">
                     <h3>Jesus Revealed, Jesus Glorified</h3>
                     <p>Experience a transformative read that offers inspiration and insight into Christlike leadership. Secure your copy to join this spiritual journey.</p>
-                    <a href="https://www.amazon.com" target="_blank" class="buy-now-btn">Buy on Amazon</a>
+                    <a href="https://a.co/d/1WdQvr2" target="_blank" class="buy-now-btn">Buy on Amazon</a>
                 </div>
             </div>
         </div>
