--- a/Pages/about-book.html
+++ b/Pages/about-book.html
@@ -15,39 +15,36 @@
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About</a></li>
-            <li><a href="about-book.html">Book</a></li>
+            <li><a href="about-author.html">About the Author</a></li>
+            <li><a href="about-book.html">About the Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="media.html">Media</a></li>
         </ul>
     </nav>
     <section class="book-details">
         <h2>About the Book</h2>
         <div class="book-card">
             <div class="book-card-layout">
-                <img src="images/booksite2.jpg" alt="Book Cover">
+                <img src="images/booksite2.jpg" alt="Book Cover" class="book-cover">
                 <div class="book-card-text">
-                    <h3>Jesus Revealed, Jesus Glorified</h3>
+                    <h3 style="color: #ffaa80;">Jesus Revealed, Jesus Glorified</h3>
                     <h4>The Legacy of Rev. Dr. John Akin Oyelade at Fountain of Peace Baptist Church</h4>
-                    <p>This book is a tribute, a testimony, and a timeless record of a man whose life and ministry have revealed Christ and glorified Him without distraction. Through personal stories, eyewitness accounts, messages, prayers, and moments of impact, it captures the spiritual legacy of Rev. Dr. John Akin Oyelade at Fountain of Peace Baptist Church, Òyó. More than a chronicle, it’s a celebration of divine purpose fulfilled through obedience, calling readers to behold Christ’s beauty and continue glorifying Him.</p>
-                    <p>Whether you’re a church member, minister, mentee, or curious about authentic Christian leadership, this book will inspire you to pursue a life that reveals and glorifies Jesus above all.</p>
+                    <p>This book is a tribute and a timeless record of a ministry that reveals and glorifies Christ. Through personal stories and moments of impact, it captures Rev. Dr. John Akin Oyelade’s spiritual legacy, calling readers to behold Christ’s beauty.</p>
                 </div>
             </div>
             <div class="button-container">
-                <a href="sendforth.html" class="order-btn" style="float: left;">Learn About the Sendforth Program</a>
-                <a href="purchase.html" class="order-btn" style="float: right;">Buy Now</a>
+                <a href="https://a.co/d/1WdQvr2" target="_blank" class="order-btn" style="margin-right: 10px;">Buy Now</a>
             </div>
         </div>
         <div class="book-details-content">
-            <h3>Why Writing This Book in His Honour is Important</h3>
+            <h3>Why This Book Matters</h3>
             <div class="text-image-pair">
                 <div class="text-content">
-                    <p>Writing this book in honour of Rev’d Dr. John Oyelade is not merely an act of recognition; it is an intentional effort to preserve and commemorate a legacy that has left an indelible mark on Fountain of Peace Baptist Church, the community of Oyo, and the wider body of Christ. In the rush of everyday life, it is all too easy for remarkable stories of faith, sacrifice, and leadership to fade into the background. This book serves as a timely reminder of the power of God’s work through dedicated servants like Rev’d Dr Oyelade.</p>
-                    <p>His leadership has spanned nearly two decades, a period in which he has helped shape not just a church but an entire movement of believers committed to peace, unity, and spiritual growth.</p>
+                    <p>Writing this book honors Rev’d Dr. John Oyelade’s transformative leadership at Fountain of Peace Baptist Church, preserving a legacy of faith and unity for future generations.</p>
                 </div>
                 <img src="images/authorpic5.jpg" alt="Author Illustration" class="side-image">
             </div>
-            <p>It is crucial that such a transformative journey be captured and reflected upon, so that future generations can be inspired by the lessons learnt and the testimony of what God has done through his leadership. This book will not only highlight the milestones achieved under his guidance but also encourage others to embrace the mantle of leadership with humility, faith, and a deep commitment to serving God and His people.</p>
         </div>
         <div class="countdown-container">
             <div id="countdown" class="countdown"></div>
@@ -80,15 +77,6 @@
                 <div class="countdown-item"><span class="count">${minutes}</span><br>Minutes</div>
                 <div class="countdown-item"><span class="count">${seconds}</span><br>Seconds</div>
             `;
-
-            const counts = document.querySelectorAll(".count");
-            counts.forEach(count => {
-                count.style.transition = "all 0.5s ease-out";
-                count.style.transform = "scale(1.1)";
-                setTimeout(() => {
-                    count.style.transform = "scale(1)";
-                }, 500);
-            });
 
             if (distance < 0) {
                 document.getElementById("countdown").innerHTML = "Launched!";
