--- a/Pages/about-book.html
+++ b/Pages/about-book.html
@@ -15,8 +15,8 @@
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About the Author</a></li>
-            <li><a href="about-book.html">About the Book</a></li>
+            <li><a href="about-author.html">About</a></li>
+            <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="media.html">Media</a></li>
