--- a/Pages/index.html
+++ b/Pages/index.html
@@ -19,6 +19,7 @@
             <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="media.html">Media</a></li>
         </ul>
     </nav>
     <section class="hero">
