--- a/Pages/Media.html
+++ b/Pages/Media.html
@@ -17,40 +17,33 @@
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about-author.html">About the Author</a></li>
-            <li><a href="about-book.html">About the Book</a></li>
+            <li><a href="about-author.html">About</a></li>
+            <li><a href="about-book.html">Book</a></li>
             <li><a href="purchase.html">Purchase</a></li>
-            <li><a href="contact.html">Contact</a></li>
             <li><a href="media.html">Media</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section class="media-content">
         <h2>Media Gallery</h2>
         <p>A glimpse into the moments that made the launch unforgettable.</p>
-        <div class="gallery">
-            <a href="images/media1.jpg" data-lightbox="launch" data-title="Launch Celebration"><img src="images/media1.jpg" alt="Launch Celebration" class="gallery-item"></a>
-            <a href="images/media2.jpg" data-lightbox="launch" data-title="Author Speaking"><img src="images/media2.jpg" alt="Author Speaking" class="gallery-item"></a>
-            <a href="images/media3.jpg" data-lightbox="launch" data-title="Book Signing"><img src="images/media3.jpg" alt="Book Signing" class="gallery-item"></a>
-            <a href="images/media4.jpg" data-lightbox="launch" data-title="Audience Moment"><img src="images/media4.jpg" alt="Audience Moment" class="gallery-item"></a>
-            <a href="images/media5.jpg" data-lightbox="launch" data-title="Group Photo"><img src="images/media5.jpg" alt="Group Photo" class="gallery-item"></a>
-            <a href="images/media6.jpg" data-lightbox="launch" data-title="Event Setup"><img src="images/media6.jpg" alt="Event Setup" class="gallery-item"></a>
-        </div>
         <div class="event-highlights">
             <h3>Event Highlights</h3>
             <div class="highlight-scroll">
-                <div class="highlight-card"><img src="images/media1.jpg" alt="Speech from the author"><p>Speech from the author</p></div>
-                <div class="highlight-card"><img src="images/media2.jpg" alt="Book signing moment"><p>Book signing moment</p></div>
-                <div class="highlight-card"><img src="images/media3.jpg" alt="Audience reaction"><p>Audience reaction</p></div>
-                <div class="highlight-card"><img src="images/media4.jpg" alt="Special guest"><p>Special guest</p></div>
+                <div class="highlight-card">
+                    <a href="images/launchpic1.jpg" data-lightbox="author-wife" data-title="Author and Wife"><img src="images/launchpic1.jpg" alt="Author and Wife"><p>Author and Wife</p></a>
+                </div>
+                <div class="highlight-card">
+                    <a href="images/launchpic3.jpg" data-lightbox="prayer-moment" data-title="Prayer Moment"><img src="images/launchpic3.jpg" alt="Prayer Moment"><p>Prayer Moment</p></a>
+                </div>
+                <div class="highlight-card">
+                    <a href="images/launchpic5.jpg" data-lightbox="book-unveiling" data-title="Book Unveiling"><img src="images/launchpic5.jpg" alt="Book Unveiling"><p>Book Unveiling</p></a>
+                </div>
+                <div class="highlight-card">
+                    <a href="images/launchpic6.jpg" data-lightbox="launch-group" data-title="Launch Group"><img src="images/launchpic6.jpg" alt="Launch Group"><p>Launch Group</p></a>
+                </div>
             </div>
         </div>
-        <!-- Placeholder for video if available -->
-        <!-- <div class="video-container">
-            <video controls>
-                <source src="video/launch-clip.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </div> -->
         <div class="footer-cta">
             <p>Thank you for being part of this journey. Relive the memories and share in the celebration.</p>
         </div>
